# eigenswig

./: .gitignore  Makefile.am  configure.ac
m4/: ax_check_compile_flag.m4  ax_check_java_home.m4  ax_python_devel.m4
wrapper/: Makefile.am
wrapper/csharp/: .gitignore  Makefile.am
wrapper/java/: .gitignore  Makefile.am
wrapper/python/: Makefile.am
wrapper/swig/: Makefile.am  eigen3.i
